--- a/template/projects-sang.html
+++ b/template/projects-sang.html
@@ -92,11 +92,20 @@
         <a href="#" class="arrow-next"><img src="http://s3.amazonaws.com/codecademy-content/courses/ltp2/img/flipboard/arrow-next.png"></a>
     </div>
 
-    <footer class="footer">
-        <div class="container">
-            <p>&copy; Sang Lin 2015</p>
-        </div>
-    </footer>
+<footer class="footer">
+    <div class="container">
+        <ul class="social-media">
+            <li><img style="padding-right: 20px" src="../img/email.png"></li>
+            <li>linsang90@gmail.com</li>
+            <li><a href="https://github.com/linsang90"><img style="padding-left:50px " src="../img/github.png"></a></li>
+            <li><a href="https://www.linkedin.com/in/sanglin90"><img style="padding-left: 20px" src="../img/linkedin.png"></a></li>
+            <li><a href="https://www.instagram.com/kiddolin21/"><img style="padding-left: 20px;padding-right: 20px" src="../img/instagram.png"></a></li>
+            <li>Follow me</li>
+            <li><img style="padding-left: 50px;padding-right: 20px" src="../img/like.png"></li>
+            <li>©2015 By Sang Lin</li>
+        </ul>
+    </div>
+</footer>
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script src="../script.js"></script>
